feat(agc): Complete Phase 1 live-fire verification, implement Phase 2-5 memory/IO/parity engines, and update tests